--- a/Documentación/tex/B_Requisitos.tex
+++ b/Documentación/tex/B_Requisitos.tex
@@ -1,7 +1,7 @@
 \apendice{Especificación de Requisitos}
 
 \section{Introducción}
-En el presente anexo se detallan los objetivos generales de la aplicación desarrollada y el catálogo de requisitos funcionales y no funcionales.
+En el presente anexo se detallan los objetivos generales de la aplicación desarrollada y el catálogo de requisitos funcionales y no funcionales así como los diagramas de casos de uso.
 \section{Objetivos generales}
 \begin{itemize}
 	\item Un objetivo es el de estudiar el estado del arte en este tipo de aplicaciones de realidad aumentada, realizando una aplicación para el ámbito educativo.
