Actualizos Requisitos Funcionales

--- a/Documentación/tex/B_Requisitos.tex
+++ b/Documentación/tex/B_Requisitos.tex
@@ -4,7 +4,8 @@
 En el presente anexo se detallan los objetivos generales de la aplicación desarrollada y el catálogo de requisitos funcionales y no funcionales así como los diagramas de casos de uso.
 \section{Objetivos generales}
 \begin{itemize}
-	\item Un objetivo es el de estudiar el estado del arte en este tipo de aplicaciones de realidad aumentada, realizando una aplicación para el ámbito educativo.
+	\item Un objetivo es el de estudiar el estado del arte en este tipo de aplicaciones de realidad aumentada, 
+	\item Realizar una aplicación para el ámbito educativo, empleando las aplicaciones AR estudiadas.
 	\item Utilizar MergeCube para el diseño e implementación de la aplicación.
 	\item Como ejercicio se ha diseñado el crecimiento de una planta, en el que se representaría las principales fases del crecimiento. Sería para usar en clases de biología de primaria/secundaria.
 	\item Que pueda usarse en el mayor número de dispositivos compatible posibles.
@@ -12,21 +13,25 @@ En el presente anexo se detallan los objetivos generales de la aplicación desar
 \section{Catálogo de requisitos}
 \subsection{Requisitos Funcionales}
  \begin{itemize}
-	\item \textbf{RF 1:} Menú en el que configurar diferentes modos.
+	\item \textbf{RF 1:}Crear una aplicación educativa.
 	\begin{itemize}
-	\item \textbf{RF 1.1:} Seleccionar entre diferentes modos de juego.
-	\item \textbf{RF 1.2:} Ajustar tiempos de cada fase,  .
-	\item \textbf{RF 1.3:} Seleccionar posibles tipos de plantas.	
+	\item \textbf{RF 1.1:} Permitir que el usuario configure el nivel.
+	\item \textbf{RF 1.2:} Reconocer los niveles que ya han sido completados y distinguirlos de los demás.
+	\item \textbf{RF 1.3:} Ofrecer ayuda o tutorial.	
+	\item \textbf{RF 1.4:} Realizar capturas de pantalla y guardarlas en el dispositivo.
+	\item \textbf{RF 1.5:} Permitir realizar encuestas de valoración.
+	\item \textbf{RF 1.6:} Acceder a la información de los sensores del dispositivo.
+	
 	\end{itemize} 
-	\item \textbf{RF 2:} Botones para seleccionar las diferentes herramientas (regar, abonar, etc ).
-	\item \textbf{RF 3:} Botón para volver al menú de selección.
-	\item \textbf{RF 4:} Una interfaz que indique el progreso de cada fase del juego.
-	\item \textbf{RF 5:} Uso del giroscopio del dispositivo, para simular tener gravedad correctamente orientada.
-	\item \textbf{RF 6:} Posibilidad de mover el dispositivo, alrededor del objeto representado por realidad aumentada.
-	\item \textbf{RF 7:} Ofrecer información educativa implementada dentro del juego.
-	\item \textbf{RF 8:} Ofrecer una Ayuda de usuario o tutorial.
-	\item \textbf{RF 9:} Poder cambiar de idioma.
-	\item \textbf{RF 10:} Poder hacer capturas de pantalla.
+	\item \textbf{RF 2:} Modelar un ejercicio de realidad aumentada sobre el crecimiento de una planta.
+	\begin{itemize}
+	\item \textbf{RF 2.1:} Representar visualmente el avance en cada fase.
+	\item \textbf{RF 2.2:} Representar visualmente las herramientas con las que se avanza en el juego, simulando que el dispositivo puede manejar esa herramienta.
+	\item \textbf{RF 2.3:} Cada fase de un nivel, estará representado por una etapa del crecimiento de una planta.
+	
+	\end{itemize} 
+	
+	
 \end{itemize}
 \subsection{Requisitos no Funcionales}
 \begin{itemize}
