Actualizado Técnicas y herramientas

--- a/Documentación/bibliografia.bib
+++ b/Documentación/bibliografia.bib
@@ -75,3 +75,13 @@
 }
 
 @misc{fletcher_2010, title={10 Tech Trends for 2010}, url={http://content.time.com/time/specials/packages/completelist/0,29569,1973759,00.html}, journal={Time}, publisher={Time Inc.}, author={Fletcher, Dan}, year={2010}, month={Mar}}
+
+@misc{fotoAR1, title={AR Plus}, url={https://pokemongo.fandom.com/wiki/AR_Plus}, journal={Pokémon GO Wiki}}
+
+@misc{fotoAR2, title={Así funciona Live View, las indicaciones con realidad aumentada de Google Maps}, url={https://www.lanacion.com.ar/tecnologia/asi-funciona-live-view-indicaciones-realidad-aumentada-nid2286111}, journal={LA NACION}, publisher={LA NACION}, author={Tomoyose, Guillermo}, year={2019}, month={Sep}}
+
+@misc{fotoAR3, title={Realidad Aumentada y educación, la gran revolución en el aula}, url={https://www.isostopy.com/realidad-aumentada-educacion/}, journal={Isostopy}, author={software@isostopy.com, Isostopy and Isostopy and Software@isostopy.com}, year={2018}, month={Sep}}
+
+@misc{fotoAR4, title={Vuforia Studio}, url={https://www.designtechproducts-ptc-ar.com/vuforia-studio}, journal={Vuforia Studio is Authoring Tool for Augmented Reality Experiences.}}
+
+@misc{marta_app, title={KUdan AR Case study}, url={https://www.xlsoft.com/en/products/kudan/showcase/marta.html}, journal={エクセルソフト Arction}}
