--- a/Documentación/tex/4_Tecnicas_y_herramientas.tex
+++ b/Documentación/tex/4_Tecnicas_y_herramientas.tex
@@ -40,6 +40,18 @@ Para añadir la cámara hacemos click derecho, Vuforia Engine, y escogemos AR Ca
 Un problema que tiene el realizar una aplicación para móviles, es que cada vez que se quiera hacer una prueba en el dispositivo es necesario compilar al apk .... Este proceso para hacer pruebas puntales no tiene un gran impacto en cuanto esfuerzo y tiempo invertido, pero si es necesario hacer muchas pruebas, por que por ejemplo hay un bug especifico que unicamente ocurre en el dispositivo móvil, el impacto en tiempo invertido en compilar será considerable.
 
 
+-
+
+-
+
+-
+
+Para la implementación de las funcionalidades de Device Tracker y crear target personalizados, me basare en los que ofrece Vuforia en su ejemplo\footnote{\url{https://assetstore.unity.com/packages/templates/packs/vuforia-core-samples-99026}} utilizando de base sus mismos scripts, adaptando les a las necesidades del ejemplo desarrollado.
+
+Para la captura de un target personalizado, hay que crear en la interfaz una señal que indique que el objetivo que se desea transformar en un target tiene una calidad suficiente. Esto puede realizarse mediante una representación de tres colores, como un semáforo. Después hay que añadir en el proyecto un ImagenTarget y configurarlo en el Inspector y definirlo como tipo de User Defined. Es muy importante asegurase de que el ImagenTarget está situado en el campo de visión de la ARcamera, o de lo contrario será imposible reconocerle. Seguido hay que añadir CameraImageBuilder que es el encargado de construir el target temporal. Ahora el paso ha seguir es de asginar a los componentes creados sus respectivos scripts, durante este proceso en mi primer intento Unity tuvo algún fallo y corrompió el proyecto, haciendo imposible asociar ningún script y ademas los que estaban asociados anteriormente también fallaban. Para solucionar el bug probé dos posibles soluciones: borrar los metadatos y reimportar todo el proyecto, por desgracia ninguno funciono por lo que tuve que volver a una copia de seguridad.
+Para implementar el Device tracker hay que crear un botón para poder activarlo y desactivarlo, y añadir el correspondiente script de deviceTracker.
+
+
 
 
 \section{Herramientas de documentación}
