Planificación temporal Sprint 16

--- a/Documentación/tex/A_Plan_proyecto.tex
+++ b/Documentación/tex/A_Plan_proyecto.tex
@@ -84,6 +84,12 @@ Otro punto a investigar se trata de añadir alguna de las otras funciones de rea
 \subsection{Sprint 15 (13/05/2020 - 20/05/2020)}
  Durante la reunión mostré la implementación del menú Ar en la aplicación que había realizado en el anterior sprint. También estuve explicando las conclusiones del estudio de posibles nuevas funciones de Vuforia a usar, destaque 2, Device tracking y Crear un target personalizado temporal, por lo que uno de los objetivos para el presente sprint será implementar estas funcionalidades en la aplicación. Acorde con el objetivo de añadir estas dos nuevas funcionalidades, habría que actualizar la interfaz. Otro de los objetivos para el sprint es crear un pequeña guía para que los nuevos usuarios puedan aprender los pasos básicos del funcionamiento de la aplicación.
  
+ \subsection{Sprint 16 (20/05/2020 - 27/05/2020)}
+ 
+ En la reunión del sprint mostré un vídeo de demostración de las funciones nuevas implementadas. Se me recomendó el subir este tipo de vídeos que pueda haciendo, y adjuntarlos en la documentación.
+ 
+ Para este sprint el objetivo mas principal es darle un pulido a la aplicación en la interfaz y demás para que se acerque mas al lo que debería ser el producto final. Otra mejora en la aplicación será implementar  la posibilidad de configurar desde el menú que tipo de realidad aumentada usar y poder ajustar otros posibles parámetros.  También seguir completando y mejorando la documentación, para este sprint me centraré en el punto de la historia de la realidad aumentada y comenzaré ha construir la tabla comparativa de las herramientas.
+ 
 \section{Estudio de viabilidad}
 
 \subsection{Viabilidad económica}
